<resources>
    <string name="app_name">Router</string>
    <string name="google_maps_key">Google Maps Key!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_details">Map</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_own_routes">Own routes</string>
    <string name="drawer_add_route">Add route</string>
    <string name="drawer_search_route">Search route</string>
    <string name="drawer_log_out">Log out</string>
    <string name="drawer_sub_title_routes">Routes</string>
    <string name="name">Name</string>
    <string name="send_email">Send Email</string>
    <string name="call">Call</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_phone">Enter your phone number</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="ron">RON</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="show_passengers_switch">Show passegers?</string>
    <string name="passengers">Passengers</string>
    <string name="no_passengers">No passengers yet</string>
    <string name="view_profile">View profile</string>
    <string name="own_loading">Loading your routes…</string>
    <string name="routeOwner">routeOwner</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="parse_app_id">NiPzJoksbo1Hjp8VO5qiTJf0heB2ZHTvsbfgF2Gg</string>
    <string name="parse_client_id">TaHxiUvGn5dICdDllvDlMJLD56NEO3chJPkFI5b2</string>
    <string name="facebook_app_id">1656238304659370</string>
    <string name="maxp">Max person</string>
    <string name="addr">add</string>
    <string name="from_date">From date</string>
    <string name="err_msg_to">Enter a full destination (That not matches with the take-off point)</string>
    <string name="err_msg_from">Enter a full take-off point (correctly)</string>
    <string name="err_msg_date">Enter a valid date</string>
    <string name="err_msg_price">Enter a price</string>
    <string name="err_msg_maxperson">Enter a person limit</string>
    <string name="email_address">E-mail address</string>
    <string name="email_subject">Subject</string>
    <string name="email_text">Text</string>
</resources>