<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/own_routes"
            android:icon="@drawable/ic_own_routes"
            android:title="@string/drawer_own_routes" />
        <item
            android:id="@+id/add_route"
            android:icon="@drawable/ic_add_route"
            android:title="@string/drawer_add_route" />
        <item
            android:id="@+id/search_route"
            android:icon="@drawable/ic_search_route"
            android:title="@string/drawer_search_route" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/drawer_log_out" />
    </group>
</menu>