<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.engineering.software.sapi.project.AddRouteFragment">


    <LinearLayout
        android:id="@+id/textFieldHolder3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">

        <AutoCompleteTextView
            android:id="@+id/from"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">

        <AutoCompleteTextView
            android:id="@+id/to"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:inputType="text"
            android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">

        <EditText
            android:id="@+id/price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="number"
            android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">

        <EditText
            android:id="@+id/max"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maxp"
            android:inputType="number"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/add_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/addr" />

</LinearLayout>
