<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.engineering.software.sapi.project.Profile.ProfileFragment">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:src="@drawable/default_profile_pic" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/profile_picture"
        android:paddingLeft="10dp"
        android:textColor="@color/common_plus_signin_btn_text_dark_disabled"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@+id/profile_picture"
        android:paddingLeft="10dp"
        android:text="4.5"
        android:textSize="25dp" />

    <ImageView
        android:id="@+id/rating_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@+id/rating"
        android:clickable="false"
        android:src="@drawable/ic_rating_star" />

    <TextView
        android:id="@+id/delimiter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/profile_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delimiter"
        android:paddingLeft="10dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_name"
        android:paddingLeft="10dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_email"
        android:paddingLeft="10dp">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/input_layout_phone"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="Edit"
        android:textAlignment="center" />

</RelativeLayout>